@@ -1,7 +1,6 @@
-package snownee.minieffects.mixin.compat;
+package snownee.minieffects.mixin.rei;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
@@ -9,17 +8,18 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import me.shedaniel.math.Rectangle;
+import me.shedaniel.rei.plugin.client.exclusionzones.DefaultPotionEffectExclusionZones;
 import net.minecraft.client.gui.screens.inventory.EffectRenderingInventoryScreen;
 import net.minecraft.client.renderer.Rect2i;
 import snownee.minieffects.IAreasGetter;
 
-@Mixin(targets = "me.shedaniel.rei.plugin.client.exclusionzones.DefaultPotionEffectExclusionZones", remap = false)
-public class MixinDefaultPotionEffectExclusionZones {
+@Mixin(value = DefaultPotionEffectExclusionZones.class, remap = false)
+public class DefaultPotionEffectExclusionZonesMixin {
 
 	@Inject(method = "provide", at = @At("HEAD"), cancellable = true, require = 0)
-	public void getGuiExtraAreas(EffectRenderingInventoryScreen<?> containerScreen, CallbackInfoReturnable<Collection<Rectangle>> ci) {
+	private void getGuiExtraAreas(EffectRenderingInventoryScreen<?> containerScreen, CallbackInfoReturnable<Collection<Rectangle>> ci) {
 		if (containerScreen instanceof IAreasGetter)
-			ci.setReturnValue(((IAreasGetter) containerScreen).getAreas().stream().map($ -> mapRect($)).collect(Collectors.toList()));
+			ci.setReturnValue(((IAreasGetter) containerScreen).getAreas().stream().map($ -> mapRect($)).toList());
 	}
 
 	private static Rectangle mapRect(Rect2i rect) {
